src/test/ui/const-generics/issues/issue-74713.full.stderr
error[E0308]: mismatched types
  --> $DIR/issue-74713.rs:9:10
   |
LL |       [(); {
   |  __________^
LL | |         let _: &'a ();
LL | |
LL | |     }]: ,
   | |_____^ expected `usize`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
